fix : make details

--- a/mdiapipe.ipynb
+++ b/mdiapipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a0ecd6fd",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,8 @@
     "        elif a < 70:\n",
     "            return \"-1\"\n",
     "\n",
-    "cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(1)\n",
+    "# cap = cv2.VideoCapture(\"./data/push2.mp4\")\n",
     "with mp_pose.Pose(\n",
     "        min_detection_confidence=0.5,\n",
     "        min_tracking_confidence=0.5) as pose:\n",
@@ -44,7 +45,7 @@
     "        success, image = cap.read()\n",
     "        if not success:\n",
     "            print(\"카메라를 찾을 수 없습니다.\")\n",
-    "            continue\n",
+    "            break\n",
     "\n",
     "        # 필요에 따라 성능 향상을 위해 이미지 작성을 불가능함으로 기본 설정합니다.\n",
     "        image.flags.writeable = False\n",
@@ -54,6 +55,7 @@
     "        # 포즈 주석을 이미지 위에 그림\n",
     "        image.flags.writeable = True\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "        # image = cv2.resize(image, (1200,800))\n",
     "        try:\n",
     "            # Get coordinates\n",
     "            landmarks = results.pose_landmarks.landmark\n",
@@ -70,6 +72,8 @@
     "            R_hip = [landmarks[mp_pose.PoseLandmark.RIGHT_HIP.value].x, landmarks[mp_pose.PoseLandmark.RIGHT_HIP.value].y]\n",
     "            R_knee = [landmarks[mp_pose.PoseLandmark.RIGHT_KNEE.value].x, landmarks[mp_pose.PoseLandmark.RIGHT_KNEE].y]\n",
     "            \n",
+    "            \n",
+    "            \n",
     "            # Calculate angle\n",
     "            L_wrist_angle = calculate_angle(L_shoulder, L_elbow, L_wrist)\n",
     "            R_wrist_angle = calculate_angle(R_shoulder, R_elbow, R_wrist)\n",
@@ -77,12 +81,12 @@
     "            R_hip_angle = calculate_angle(R_shoulder,R_hip,R_knee)\n",
     "            L_armpit_angle = calculate_angle(L_elbow, L_shoulder, L_hip)\n",
     "            R_armpit_angle = calculate_angle(R_elbow, R_shoulder, R_hip)\n",
-    "            \n",
+    "        \n",
     "            \n",
     "            # input status text\n",
     "            status = \"I don't know\"\n",
-    "            hip_status = \"\"\n",
-    "            position = \"\"\n",
+    "            hip_status = \"good\"\n",
+    "            position = \"..\"\n",
     "        \n",
     "            L_arm = Armpit(L_armpit_angle)\n",
     "            R_arm = Armpit(R_armpit_angle)\n",
@@ -108,28 +112,31 @@
     "                else:\n",
     "                    status = \"No, fix your posture\"\n",
     "                    \n",
-    "            if(L_hip_angle < 190 and L_hip_angle > 170) and (R_hip_angle < 190 and L_hip_angle < 170):\n",
-    "                hip_status = \" \"\n",
+    "            if(L_hip_angle < 200 and L_hip_angle > 150)  (R_hip_angle < 200 and L_hip_angle < 200):\n",
+    "                hip_status = \"good\"\n",
     "            else:\n",
     "                hip_status = \"fix your hip\"\n",
     "                    \n",
+    "            print(status)\n",
+    "            \n",
     "            cv2.putText(image, str(status), (50, 100), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
     "            cv2.putText(image, str(hip_status), (50, 150), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
+    "            cv2.putText(image, str(position), (50, 200), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
     "\n",
     "\n",
     "            cv2.putText(image,str(int(L_wrist_angle)),\n",
     "                            tuple(np.multiply(L_elbow, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                       )\n",
-    "            cv2.putText(image, str(int (R_wrist_angle)),\n",
+    "            cv2.putText(image, str(int(R_wrist_angle)),\n",
     "                            tuple(np.multiply(R_elbow, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
-    "            cv2.putText(image, str(int (L_armpit_angle)),\n",
+    "            cv2.putText(image, str(int(L_armpit_angle)),\n",
     "                            tuple(np.multiply(L_shoulder, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
-    "            cv2.putText(image, str(int (R_armpit_angle)),\n",
+    "            cv2.putText(image, str(int(R_armpit_angle)),\n",
     "                            tuple(np.multiply(L_shoulder, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
@@ -148,8 +155,8 @@
     "        cv2.imshow('MediaPipe Pose', image)\n",
     "        if cv2.waitKey(5) & 0xFF == 27: # ESC\n",
     "            break\n",
-    "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
