--- a/mdiapipe.ipynb
+++ b/mdiapipe.ipynb
@@ -10,10 +10,14 @@
     "import cv2\n",
     "import mediapipe as mp\n",
     "import numpy as np\n",
+    "import requests\n",
+    "import time\n",
     "\n",
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_drawing_styles = mp.solutions.drawing_styles\n",
     "mp_pose = mp.solutions.pose\n",
+    "url = \"http://10.150.150.69:3000/api/data/\"\n",
+    "data = 0\n",
     "\n",
     "def calculate_angle(a,b,c):\n",
     "    a = np.array(a) # First\n",
@@ -36,8 +40,7 @@
     "        elif a < 70:\n",
     "            return \"-1\"\n",
     "\n",
-    "cap = cv2.VideoCapture(1)\n",
-    "# cap = cv2.VideoCapture(\"./data/push2.mp4\")\n",
+    "cap = cv2.VideoCapture(0)\n",
     "with mp_pose.Pose(\n",
     "        min_detection_confidence=0.5,\n",
     "        min_tracking_confidence=0.5) as pose:\n",
@@ -45,7 +48,7 @@
     "        success, image = cap.read()\n",
     "        if not success:\n",
     "            print(\"카메라를 찾을 수 없습니다.\")\n",
-    "            break\n",
+    "            continue\n",
     "\n",
     "        # 필요에 따라 성능 향상을 위해 이미지 작성을 불가능함으로 기본 설정합니다.\n",
     "        image.flags.writeable = False\n",
@@ -55,7 +58,6 @@
     "        # 포즈 주석을 이미지 위에 그림\n",
     "        image.flags.writeable = True\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-    "        # image = cv2.resize(image, (1200,800))\n",
     "        try:\n",
     "            # Get coordinates\n",
     "            landmarks = results.pose_landmarks.landmark\n",
@@ -72,8 +74,6 @@
     "            R_hip = [landmarks[mp_pose.PoseLandmark.RIGHT_HIP.value].x, landmarks[mp_pose.PoseLandmark.RIGHT_HIP.value].y]\n",
     "            R_knee = [landmarks[mp_pose.PoseLandmark.RIGHT_KNEE.value].x, landmarks[mp_pose.PoseLandmark.RIGHT_KNEE].y]\n",
     "            \n",
-    "            \n",
-    "            \n",
     "            # Calculate angle\n",
     "            L_wrist_angle = calculate_angle(L_shoulder, L_elbow, L_wrist)\n",
     "            R_wrist_angle = calculate_angle(R_shoulder, R_elbow, R_wrist)\n",
@@ -81,12 +81,12 @@
     "            R_hip_angle = calculate_angle(R_shoulder,R_hip,R_knee)\n",
     "            L_armpit_angle = calculate_angle(L_elbow, L_shoulder, L_hip)\n",
     "            R_armpit_angle = calculate_angle(R_elbow, R_shoulder, R_hip)\n",
-    "        \n",
+    "            \n",
     "            \n",
     "            # input status text\n",
     "            status = \"I don't know\"\n",
-    "            hip_status = \"good\"\n",
-    "            position = \"..\"\n",
+    "            hip_status = \"\"\n",
+    "            position = \"\"\n",
     "        \n",
     "            L_arm = Armpit(L_armpit_angle)\n",
     "            R_arm = Armpit(R_armpit_angle)\n",
@@ -95,48 +95,68 @@
     "                position = \"good posture\"\n",
     "            elif L_arm == \"+1\" or R_arm == \"+1\":\n",
     "                position = \"put your arms back a little\"\n",
+    "                data = 1\n",
+    "                url_with_data = url + str(data)\n",
+    "                response = requests.get(url_with_data)\n",
     "            elif L_arm == \"-1\" or R_arm == \"-1\":\n",
     "                position = \"put your arms forward a little\"\n",
+    "                data = 1\n",
+    "                url_with_data = url + str(data)\n",
+    "                response = requests.get(url_with_data)\n",
     "            else:\n",
     "                position = \"I don't know\"\n",
-    "                \n",
+    "                data = 1\n",
+    "                url_with_data = url + str(data)\n",
+    "                response = requests.get(url_with_data)\n",
     "            \n",
     "            if L_wrist_angle > R_wrist_angle:\n",
     "                if (L_wrist_angle - R_wrist_angle) < 30:\n",
     "                    status = \"Good push up\"\n",
+    "                    data = 0\n",
+    "                    url_with_data = url + str(data)\n",
+    "                    response = requests.get(url_with_data)\n",
     "                else:\n",
     "                    status = \"No, fix your posture\"\n",
+    "                    data = 1\n",
+    "                    url_with_data = url + str(data)\n",
+    "                    response = requests.get(url_with_data)\n",
     "            else:\n",
     "                if (R_wrist_angle - L_wrist_angle) < 30:\n",
     "                    status = \"Good push up\"\n",
+    "                    data = 0\n",
+    "                    url_with_data = url + str(data)\n",
+    "                    response = requests.get(url_with_data)\n",
     "                else:\n",
     "                    status = \"No, fix your posture\"\n",
-    "                    \n",
-    "            if(L_hip_angle < 200 and L_hip_angle > 150)  (R_hip_angle < 200 and L_hip_angle < 200):\n",
-    "                hip_status = \"good\"\n",
+    "                    data = 1\n",
+    "                    url_with_data = url + str(data)\n",
+    "                    response = requests.get(url_with_data)\n",
+    "            if(L_hip_angle < 190 and L_hip_angle > 170) and (R_hip_angle < 190 and L_hip_angle < 170):\n",
+    "                hip_status = \" \"\n",
     "            else:\n",
     "                hip_status = \"fix your hip\"\n",
-    "                    \n",
-    "            print(status)\n",
+    "                data = 1\n",
+    "                url_with_data = url + str(data)\n",
+    "                response = requests.get(url_with_data)\n",
     "            \n",
+    "                    \n",
     "            cv2.putText(image, str(status), (50, 100), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
     "            cv2.putText(image, str(hip_status), (50, 150), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
-    "            cv2.putText(image, str(position), (50, 200), cv2.FONT_HERSHEY_SIMPLEX, 0.5,(0,255,0), 2, cv2.LINE_AA)\n",
     "\n",
     "\n",
     "            cv2.putText(image,str(int(L_wrist_angle)),\n",
     "                            tuple(np.multiply(L_elbow, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                       )\n",
-    "            cv2.putText(image, str(int(R_wrist_angle)),\n",
+    "            cv2.putText(image, str(int (R_wrist_angle)),\n",
     "                            tuple(np.multiply(R_elbow, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
-    "            cv2.putText(image, str(int(L_armpit_angle)),\n",
+    "            cv2.putText(image, str(int (L_armpit_angle)),\n",
     "                            tuple(np.multiply(L_shoulder, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
-    "            cv2.putText(image, str(int(R_armpit_angle)),\n",
+    "            cv2.putText(image, str(int (R_armpit_angle)),\n",
     "                            tuple(np.multiply(L_shoulder, [640, 480]).astype(int)),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2, cv2.LINE_AA\n",
     "                    )\n",
@@ -155,8 +175,8 @@
     "        cv2.imshow('MediaPipe Pose', image)\n",
     "        if cv2.waitKey(5) & 0xFF == 27: # ESC\n",
     "            break\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
@@ -236,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
